kubernetes/manifests/kube-prometheus/loki-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-loki-stack-to-grafana
  namespace: monitoring
spec:
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: loki-stack
      ports:
        - protocol: TCP
          port: 3100
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-loki-to-grafana
  namespace: monitoring
spec:
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: loki
      ports:
        - protocol: TCP
          port: 3100
